--- a/TrustPilotRabbitHole/TrustPilotRabbitHole.csproj
+++ b/TrustPilotRabbitHole/TrustPilotRabbitHole.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAWG.cs" />
+    <Compile Include="LetterFrequencyMatrix.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
